tests/snapshots/formats__avro__users-bzip2.avro.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ users-bzip2.avro — Avro object container, codec bzip2, schema User  [0x0+0x143]
    Magic: 4f 62 6a 01  |Obj.|  [0x0+0x4]
  ▾ Metadata — 2 entries  [0x4+0xa8]
    ▾ avro.schema — JSON object, 4 members  [0x13+0x87]
        type: "record"  [0x1c+0x8]
        name: "User"  [0x2e+0x6]
        namespace: "test"  [0x43+0x6]
      ▾ fields — array, 2 elements  [0x55+0x44]
        ▾ [0] — object, 2 members  [0x56+0x22]
            name: "name"  [0x5f+0x6]
            type: "string"  [0x6f+0x8]
        ▾ [1] — object, 2 members  [0x7a+0x1e]
            name: "age"  [0x83+0x5]
            type: "int"  [0x92+0x5]
      avro.codec: "bzip2"  [0x9a+0x11]
    Sync marker: a0 a1 a2 a3 a4 a5 a6 a7 a8 a9 aa ab ac ad ae af  |................|  [0xac+0x10]
  ▾ Blocks  [0xbc+0x87]
    ▾ Block 0 — 2 objects, 51 bytes  [0xbc+0x45]
        Object count: 2  [0xbc+0x1]
        Size: 51  [0xbd+0x1]
      ▾ Objects — 0xc bytes decompressed  [0xbe+0x33]
          Data  [#1:0x0+0xc]
        Sync marker  [0xf1+0x10]
    ▾ Block 1 — 1 objects, 48 bytes  [0x101+0x42]
        Object count: 1  [0x101+0x1]
        Size: 48  [0x102+0x1]
      ▾ Objects — UTF-8 text, LF line endings, 2 lines  [0x103+0x30]
          Encoding: "UTF-8"
          Line endings: "LF" — 1 LF, 0 CRLF, 0 CR
        ▾ Lines — 2 lines  [#2:0x0+0x7]
            Line 1: ""  [#2:0x0+0x0]
            Line 2: "carolR"  [#2:0x1+0x6]
        Sync marker  [0x133+0x10]
