tests/snapshots/formats__avro__users-deflate.avro.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ users-deflate.avro — Avro object container, codec deflate, schema User  [0x0+0xf9]
    Magic: 4f 62 6a 01  |Obj.|  [0x0+0x4]
  ▾ Metadata — 2 entries  [0x4+0xaa]
      avro.schema: "{\"type\": \"record\", \"name\": \"User\", \"namespace\": \"test\", \"fields\": [{\"name\": \"name\", \"type\": \"string\"}, {\"name\": \"age\", \"type\": \"int\"}]}"  [0x5+0x95]
      avro.codec: "deflate"  [0x9a+0x13]
    Sync marker: a0 a1 a2 a3 a4 a5 a6 a7 a8 a9 aa ab ac ad ae af  |................|  [0xae+0x10]
  ▾ Blocks  [0xbe+0x3b]
    ▾ Block 0 — 2 objects, 14 bytes  [0xbe+0x20]
        Object count: 2  [0xbe+0x1]
        Size: 14  [0xbf+0x1]
      ▾ Objects — 0xc bytes decompressed  [0xc0+0xe]
          Data  [#1:0x0+0xc]
        Sync marker  [0xce+0x10]
    ▾ Block 1 — 1 objects, 9 bytes  [0xde+0x1b]
        Object count: 1  [0xde+0x1]
        Size: 9  [0xdf+0x1]
      ▾ Objects — UTF-8 text, LF line endings, 2 lines  [0xe0+0x9]
          Encoding: "UTF-8"
          Line endings: "LF" — 1 LF, 0 CRLF, 0 CR
        ▾ Lines — 2 lines  [#2:0x0+0x7]
            Line 1: ""  [#2:0x0+0x0]
            Line 2: "carolR"  [#2:0x1+0x6]
        Sync marker  [0xe9+0x10]
