tests/snapshots/formats__avro__users-snappy.avro.snap
---
source: tests/formats.rs
expression: "common::explore(&display_name(&path), &data)"
---
▾ users-snappy.avro — Avro object container, codec snappy, schema User  [0x0+0x100]
    Magic: 4f 62 6a 01  |Obj.|  [0x0+0x4]
  ▾ Metadata — 2 entries  [0x4+0xa9]
      avro.schema: "{\"type\": \"record\", \"name\": \"User\", \"namespace\": \"test\", \"fields\": [{\"name\": \"name\", \"type\": \"string\"}, {\"name\": \"age\", \"type\": \"int\"}]}"  [0x5+0x95]
      avro.codec: "snappy"  [0x9a+0x12]
    Sync marker: a0 a1 a2 a3 a4 a5 a6 a7 a8 a9 aa ab ac ad ae af  |................|  [0xad+0x10]
  ▾ Blocks  [0xbd+0x43]
    ▾ Block 0 — 2 objects, 18 bytes  [0xbd+0x24]
        Object count: 2  [0xbd+0x1]
        Size: 18  [0xbe+0x1]
      ▾ Objects — 0xc bytes decompressed  [0xbf+0xe]
          Data  [#1:0x0+0xc]
        Sync marker  [0xd1+0x10]
    ▾ Block 1 — 1 objects, 13 bytes  [0xe1+0x1f]
        Object count: 1  [0xe1+0x1]
        Size: 13  [0xe2+0x1]
      ▾ Objects — UTF-8 text, LF line endings, 2 lines  [0xe3+0x9]
          Encoding: "UTF-8"
          Line endings: "LF" — 1 LF, 0 CRLF, 0 CR
        ▾ Lines — 2 lines  [#2:0x0+0x7]
            Line 1: ""  [#2:0x0+0x0]
            Line 2: "carolR"  [#2:0x1+0x6]
        Sync marker  [0xf0+0x10]
